tests/expectations/passes/check_interfaces/missing_function_fail.out
Error [ECHI03712002]: Program `test` implements interface `test.aleo/Calculator` but is missing the required function `subtract`.
    --> test:8:1
     |
   8 | program test.aleo : Calculator {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   9 |     // Missing subtract function
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |     fn add(a: u64, b: u64) -> u64 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  11 |         return a + b;
     |         ^^^^^^^^^^^^^
  12 |     }
     |     ^
  13 | 
  14 |     fn main(x: u64) -> u64 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
  15 |         return add(x, 1u64);
     |         ^^^^^^^^^^^^^^^^^^^^
  16 |     }
     |     ^
  17 | }
     | ^
     |
     = Add the missing function with the exact signature specified in the interface.
